--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
     "version": "1.0.0",
     "main": "server.js",
     "scripts": {
-      "start": "node server.js"
+        "start": "node server.js"
     },
     "dependencies": {
-      "dotenv": "^16.0.3",
-      "express": "^4.18.2",
-      "googleapis": "^126.0.0",
-      "body-parser": "^1.20.2",
-      "cors": "^2.8.5",
-      "axios": "^1.6.0"
+        "@google/genai": "^0.10.0",
+        "axios": "^1.6.0",
+        "body-parser": "^1.20.2",
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "google-auth-library": "^9.15.1",
+        "google-spreadsheet": "^4.1.4",
+        "googleapis": "^126.0.0"
     },
     "type": "module"
-  }
-  
+}
